--- a/src/screens/BillingScreen/BillingScreen.css
+++ b/src/screens/BillingScreen/BillingScreen.css
@@ -144,7 +144,7 @@ tbody tr td {
   background: #fff;
   border-radius: 10px;
   box-shadow: -3px 15px 12px -4px #ededed;
-  height: 175px ;
+  height: 100% ;
   /* height:  auto; */
   width: 70%;
   overflow: hidden;
@@ -331,8 +331,7 @@ tbody tr td {
   font-size: 14.5px;
   line-height: 26px;
   font-family: "f3";
-  width: 90%;  
-  margin-left: 30px;
+  width: 100%;  
 }
 
 .btn-ext {
