--- a/src/screens/home/responsive.css
+++ b/src/screens/home/responsive.css
@@ -179,6 +179,7 @@
   }
   .test-search-box {
     display: none;
+    margin-top: 0px !important;
   }
   .billing-search-box {
     display: none;
@@ -429,11 +430,12 @@
   .bill-rit {
     padding: 15px !important;
     margin: 0 auto;
+    width: 100%;
     height: 100vh;
     overflow-y: scroll;
   }
   .row-table {
-    width: 560px !important;
+    width: 100% !important;
     overflow-x: scroll;
   }
   .table-name {
@@ -606,8 +608,8 @@
     padding-left: 62px !important;
   }
   .report-h5 {
-    padding-top: 1.5rem !important;
-    margin: 25px 15px !important;
+    padding-top: 0rem !important;
+    margin: 15px 15px !important;
   }
 }
 
