--- a/src/screens/home/responsive.css
+++ b/src/screens/home/responsive.css
@@ -43,7 +43,6 @@
     border: 1px solid #8d9591;
     box-sizing: border-box;
     border-radius: 16px;
-    margin: 10px;
   }
 
   .searchrole img {
@@ -606,6 +605,7 @@
     border: 0;
     height: 43px;
     padding-left: 62px !important;
+    margin: 0px !important;
   }
   .report-h5 {
     padding-top: 0rem !important;
@@ -614,11 +614,19 @@
 }
 
 @media (max-width: 374px) {
+  .stud-prof .form-check-input {
+    border-radius: 9px;
+    width: 200px !important;
+    height: 200px !important;
+    margin: 0 !important;
+    background: none !important;
+  }
   .search-box .search-input {
     background: none;
     border: 0;
     height: 43px;
     padding-left: 42px !important;
+    margin: 0px !important;
   }
   .report-h5 {
     padding-top: 0rem !important;
